# IPSL-AID

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  HACKATHONS.rst  LICENSE  README.rst  arch-nvhpc_LEONARDO.env  benchmark.html  cartopy_configuration.html  diffusion_models.html  genindex.html  index.html  inference_modes.html  installation.html  modules_LEONARDO.env  neural_architectures.html  objects.inv  overview.html  pre_push_workflow.html  project_structure.html  py-modindex.html  pyproject.toml  quickstart.html  rtd-environment.yaml  search.html  searchindex.js  setup  testing_philosophy.html  training_strategy.html
.github/workflows/: ci.yaml  docs.yml
IPSL_AID/: __init__.py  __main__.py  dataset.py  diagnostics.py  download_ERA5_cds.py  evaluater.py  generate_all_data_ERA5.py  logger.py  loss.py  main.py  model.py  model_utils.py  networks.py  unet  utils.py  version.py
_modules/: index.html
_modules/IPSL_AID/: dataset.html  diagnostics.html  download_ERA5_cds.html  evaluater.html  (+8 more)
_sources/: cartopy_configuration.rst.txt  index.rst.txt  inference_modes.rst.txt  neural_architectures.rst.txt  overview.rst.txt  quickstart.rst.txt  training_strategy.rst.txt
api/: IPSL_AID.html  modules.html
benchmark/: adm.sh  ddpmpp.sh  ncsnpp.sh
data/: 4xdaily_global_stats_1980_2022.csv  4xdaily_global_stats_1980_2022_corrected.csv  4xdaily_yearly_stats_1980_2022.csv  4xdaily_yearly_stats_1980_2022_corrected.csv  dates_hours_1980_2022.csv  dates_hours_2021.csv  global_stats_1950_2022.csv  yearly_stats_1950_2022.csv
doc/: requirements.txt
download_ERA5/: ERA5_download_my_dates_sfc.sh  ERA5_download_project.sh  ERA5_download_single_date.sh  generate_all_data.py  generate_precipitation_data-Copy1.py  generate_precipitation_data.py  preprocessing_concat_year.py  preprocessing_subsample.py  preprocessing_subsample_fixed4ts.py
notebooks/: Introduction.ipynb  inference.ipynb  training.ipynb  training_global.ipynb  training_regional.ipynb
recipes/: meta.yaml
stats/: statistics.json
tests/: test_all.py  test_dataset.py  test_diagnostics.py  test_evaluater.py  test_logger.py  test_loss.py  test_model.py  test_model_utils.py  test_networks.py  test_utils.py
(+17 files in other folders)
