[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IPSL-AID"
version="0.1.0"
requires-python = ">=3.8"

license = { file = "LICENSE" }

description = "IPSL-AID art generator"
authors = [{ name = "Kazem Ardaneh", email = "kazem.arrdaneh@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

dependencies = [
    "numpy",
    "matplotlib",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "cartopy>=0.21.1",
    "mpltex>=0.7",
    "cycler>=0.12.1",
    "xarray>=2023.1.0",
    "rich>=14.2.0",
    "tqdm>=4.65.1",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.2",
    "netcdf4>=1.7.2",
    "h5netcdf>=1.1.0"
]
[tool.setuptools.dynamic]
version = { attr = "IPSL-AID.version.__version__" }

[project.urls]
Source = "https://github.com/kardaneh/IPSL-AID"

[project.optional-dependencies]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[tool.pytest.ini_options]
markers = ["long: marks tests as long (deselect with '-m \"not long\"')"]

[tool.uv.workspace]
members = [
    "tem",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.0",
]
